# emma

./: CMakeLists.txt  Cargo.toml  Makefile
src/: buffer.rs  command.rs  exec.cc  exec.hh  file_descriptor.cc  file_descriptor.hh  main.cc  main.rs  pane.cc  pane.hh  persistence.rs  shell.cc  shell.hh  text_widget.cc  text_widget.hh  window.cc  window.hh
