[package]
name = "emma"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.11.0"
gio = "0.7.0"
glib = "0.8.1"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]
